[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-security-toolkit"
version = "0.6.0"
description = "Colección de herramientas de seguridad de línea de comandos en Python puro (solo stdlib)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Catalina Carlen" }]
keywords = ["security", "cli", "port-scanner", "siem", "fim", "sqli", "passwords"]
dependencies = []  # solo librería estándar

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "coverage"]

[project.urls]
Repository = "https://github.com/catalinacarlen/python-security-toolkit"

[project.scripts]
pstk = "pstk.cli:main"

[tool.setuptools]
packages = ["pstk"]

# --- Calidad de código -------------------------------------------------------

[tool.ruff]
line-length = 110
target-version = "py38"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, B bugbear, C4 comprehensions, SIM simplify.
select = ["E", "W", "F", "I", "B", "C4", "SIM"]
ignore = ["E501"]  # la longitud de línea ya la controla el formateo, no la forzamos como error

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.coverage.report]
show_missing = true
